--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,23 +1,26 @@
 <section>
     <div class="container py-5">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8 my-auto">
+            <div class="col-md-5">
+                <img src="../../assets/images/my-journey.jpg" class="img-fluid image-shadow mb-3">
+            </div>
+            <div class="col-md-7 my-auto">
                 <h1>My Journey</h1>
                 <p>
                     I started my career as a Web developer in a small startup of 3 people. There I got the
                     opportunity to work on a SaaS based product and met very amazing people.
                 </p>
             </div>
-            <div class="col-md-2"></div>
         </div>
     </div>
 </section>
-<section>
+<!-- <section>
     <div class="container">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
+            <div class="col-md-5">
+                
+            </div>
+            <div class="col-md-7">
                 <p class="quote-text mb-0">
                     <i>
                         "You rarely come across standout talent like Saifil. He expertly
@@ -107,7 +110,7 @@
             <div class="col-md-2"></div>
         </div>
     </div>
-</section>
+</section> -->
 <footer>
     <app-footer></app-footer>
 </footer>
