--- a/src/app/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/wheel-for-change/wheel-for-change.component.html
@@ -1,27 +1,33 @@
-<div style="background: #F3F4F7;">
-    <section class="section">
-        <div class="container my-5">
-            <div class="row" style="margin-bottom: 20px;">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <img src="../../assets/images/woc-2.png" class="img-fluid">
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-        </div>
+<div>
 
-    </section>
-
-    <section class="section">
+    <section class="section" style="background: linear-gradient(-62deg, #FBAB7E, #F7CE68); padding-top: 8vh; padding-bottom: 8vh;">
         <div class="container">
             <div class="row" style="margin-bottom: 20px;">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 my-auto">
-                    <h1>
+                <div class="col-md-7">
+                    <img src="../../assets/images/woc-spash.png" class="img-fluid">
+                </div>
+                <div class="col-md-5 my-auto">
+                    <h1 style="color: white;">
                         Wheel For Change
                     </h1>
+                    <p style="color: white;">
+                        An Investment Platform for Social Entrepreneurs
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section>
+        <div class="container">
+            <div class="row  my-5">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3>About Project</h3>
                     <p>
-                        Wheel for change was an investment platform for Social Entrepreneurs where Potential investors
+                        Wheel for change was an platform for Social Entrepreneurs where Potential investors
                         could
                         find and invest in projects. The Client required a digital platform in which Social
                         entrepreneurs
@@ -53,53 +59,18 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="woc-pages"></div>
+    </section>
 
-    <!-- <section class="my-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>Identifying Project Scope and Roles</h3>
-                    <p>After some initial brainstorming we found that the platform needs to be divided into 3 parts post
-                        the
-                        research and different people can be accountable for each part. Based on this we divided to
-                        project into
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Marketing Website</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Social Entrepreneurs</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Investors</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section> -->
+
+
 
     <section>
-        <div class="container">
+        <div class="container  my-5">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
+                <div class="col-md-8 narrow-container">
                     <h3>Challenges</h3>
                     <p>
                         Social Entrepreneurs had to input in a lot of information through a form and forms can be long,
@@ -114,31 +85,19 @@
         </div>
     </section>
 
-    <!-- //https://www.wendyschorr.com/project-page-build-a-meal -->
+
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <h4>User Research</h4>
-                    <p>We interviewed 6 people to Understanding Social Entrepreneurs and their problems and based on
-                        that determine a set of features to solve their problems</p>
-                    <img src="../../assets/images/Persona1.PNG" style="height: auto; width: 100%;">
+                <div class="col-md-6">
+                    <img src="../../assets/images/Persona1.PNG" class="img-fluid image-shadow mb-3">
+                    <img src="../../assets/images/persona2.PNG" class="img-fluid image-shadow">
                 </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/persona2.PNG" style="height: auto; width: 100%;">
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <p><b>Key Outcomes</b></p>
-                    <ul>
+                <div class="col-md-6 my-auto">
+                    <h3>User Research</h3>
+                    <p>We intereviewed 6 people to understand thier problems.</p>
+                    <p><b>Key Outcomes from personas</b></p>
+                    <ul class="lists">
                         <li>Manage my team and distribute tasks</li>
                         <li>Meet other entrepreneurs who believe in the same cause as I do</li>
                         <li>Connect with investors with the same
@@ -146,46 +105,47 @@
                         <li>Spend less time doing paperwork</li>
                     </ul>
                 </div>
-                <div class="col-md-2"></div>
             </div>
         </div>
     </section>
 
-
-
-    <section class="section">
-        <div class="container">
+    <section>
+        <div class="container my-5">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
+                <div class="col-md-6">
+                    <img src="../../assets/images/userflow1.PNG" class="img-fluid image-shadow mb-3">
+                    <img src="../../assets/images/userflow2.PNG" class="img-fluid image-shadow">
+                </div>
+                <div class="col-md-6 my-auto">
                     <h3>User Flows</h3>
-                    <img src="../../assets/images/userflow1.PNG" style="height: auto; width: 100%;">
+                    <p>We intereviewed 6 people to understand thier problems.</p>
+                    <p><b>Key Outcomes from personas</b></p>
+                    <ul class="lists">
+                        <li>Manage my team and distribute tasks</li>
+                        <li>Meet other entrepreneurs who believe in the same cause as I do</li>
+                        <li>Connect with investors with the same
+                            social values as myself</li>
+                        <li>Spend less time doing paperwork</li>
+                    </ul>
                 </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <img src="../../assets/images/userflow2.PNG" style="height: auto; width: 100%;">
-                </div>
-                <div class="col-md-2"></div>
             </div>
         </div>
     </section>
 
-    <section class="section">
-        <div class="container">
+
+    <section>
+        <div class="container my-5">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
+                <div class="col-md-6">
                     <h4>Tasks</h4>
+                    <img src="../../assets/images/tasks.jpg" class="img-fluid image-shadow">
+                </div>
+                <div class="col-md-6 my-auto">
                     <p>
                         With the help of user flows we identified various tasks a social entrprenuer would perform and
                         also differentiated which part of the journey will be free and which one should be paid.
                     </p>
-                    <img src="../../assets/images/tasks.jpg" class="img-fluid">
                 </div>
-                <div class="col-md-2"></div>
             </div>
         </div>
     </section>
@@ -195,30 +155,53 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
+                <div class="col-md-8 narrow-container">
                     <h3>Prototype</h3>
                 </div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
+                <div class="col-md-6">
+                    <img src="../../assets/images/typeforms.PNG" class="img-fluid image-shadow">
+                </div>
+                <div class="col-md-6 my-auto">
+                    <h4>Designing Forms</h4>
+                    <p>
+                        We wanted our user to have an decluttered and simple experience while filling the forms. Hence
+                        we decided to take some inspiration from <a target="_blank"
+                            href="https://www.typeform.com/templates/t/volunteer-application/">Typeforms</a> which has
+                        some great form designs. What we
+                        Liked was that it was very focused and presented one question at a time which was important for
+                        our purpose.
+                    </p>
+
+                </div>
+            </div>
+            <div class="row my-5">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-3">
-                    <h5>Landing Page</h5>
-                    <img src="../../assets/images/Project Splash page.png" class="img-fluid image-wrapper">
-                    <h5>Project Details Page</h5>
-                    <img src="../../assets/images/Create a project details.png" class="img-fluid image-wrapper">
-                    <h5>Adding Team member Page</h5>
-                    <img src="../../assets/images/Assign a team.png" class="img-fluid image-wrapper">
-                    <h5>Project List Page</h5>
-                    <img src="../../assets/images/Projects list.png" class="img-fluid image-wrapper">
-                    <h5>Journey Page</h5>
-                    <img src="../../assets/images/landing.png" class="img-fluid image-wrapper">
-                    <h5>Application Page</h5>
-                    <img src="../../assets/images/Application Q1.png" class="img-fluid image-wrapper">
+                <div class="col-md-8 narrow-container">
+                    <h5> <i>However doing this complicated the navigation, as you now need to navigate to each and every
+                            question and we needed a solution for it.</i></h5>
                 </div>
                 <div class="col-md-2"></div>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="../../assets/images/Journey.gif" class="img-fluid image-shadow">
+                </div>
+                <div class="col-md-6 my-auto">
+                    <h4>Adding nagation to forms</h4>
+                    <p>
+                        We wanted our user to have an decluttered and simple experience while filling the forms. Hence
+                        we decided to take some inspiration from <a
+                            href="https://www.typeform.com/templates/t/volunteer-application/">Typeforms</a> which has
+                        some great form designs. What we
+                        Liked was that it was very focused and presented one question at a time which was important for
+                        our purpose.
+                    </p>
 
+                </div>
+            </div>
         </div>
     </section>
 
@@ -226,7 +209,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 narrow-container px-5 py-5 text-center">
+                <div class="col-md-8 narrow-container text-center">
                     <h4>Experience the full prototype by clicking below</h4>
                     <br>
                     <a target="_blank"
