--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,13 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 h1,h2,h3
-    font-family: 'Raleway', sans-serif
-    font-weight: bold
+    font-family: 'Lora', serif
     color: #172B4D
 
 h4,h5,h6
-    font-family: 'Raleway', sans-serif
-    font-weight: 600
+    font-family: 'Lora', serif
     color: #172B4D
 
 .header-custom
@@ -73,3 +71,27 @@ h4,h5,h6
 .image-wrapper
     box-shadow: 0px 0px 7px 0px #dadada
     margin-bottom: 20px
+
+.lists
+    padding-left: 0
+
+.lists > li
+    list-style: none
+
+p
+    font-family: 'Lato', sans-serif
+    color: #42526E
+
+p b
+    color: #172B4D
+
+.woc-pages
+    background-image: url(/assets/images/woc-pages.png)
+    width: 100vw
+    height: 100vh
+    background-position: center
+    background-size: contain
+
+.image-shadow
+    box-shadow: 0px 0px 5px -1px #bdbdbd
+
