--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,22 +7,19 @@
                     Hello! I am Saifil
                 </h1>
                 <h2 style="font-weight: 400;">
-                    A Product designer based in Toronto
+                    A Web Developer and Product designer based in Toronto
                 </h2>
                 <p style="font-size: 20px;color: #505F79;">
                     I believe in solving user problems by understanding their habits and patterns and integrating them
                     into my designs to create a seamless and effortless experience.
                 </p>
-                <p style="color: #253858;">
+                <!-- <p style="color: #253858;">
                     <span><i class="fas fa-laptop-code home-icon-wrapper"></i> <b>I Code</b></span>
                     <span class="mx-5"><i class="fas fa-bezier-curve home-icon-wrapper"></i> <b>I Design</b></span>
                     <span><i class="fas fa-chess-board home-icon-wrapper"></i><b>I Play Chess</b> </span>
-                </p>
+                </p> -->
 
             </div>
-            <!-- <div class="col-md-3">
-                <img src="../../assets/images/saifilcover.jpg" class="img-fluid">
-            </div> -->
             <div class="col-md-2"></div>
         </div>
     </div>
