--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,22 +2,18 @@
     <div class="container">
         <div class="row" style="height: 85vh;">
             <div class="col-md-2"></div>
-            <div class="col-md-8 my-auto">
-                <h1>
+            <div style="text-align: center;" class="col-md-8 my-auto">
+                <div class="home-image-icon"></div>
+                <h5>
                     Hello! I am Saifil
-                </h1>
+                </h5>
                 <h2 style="font-weight: 400;">
-                    A Web Developer and Product designer based in Toronto
+                    A Web Developer and Designer based in Toronto
                 </h2>
                 <p style="font-size: 20px;color: #505F79;">
                     I believe in solving user problems by understanding their habits and patterns and integrating them
                     into my designs to create a seamless and effortless experience.
                 </p>
-                <!-- <p style="color: #253858;">
-                    <span><i class="fas fa-laptop-code home-icon-wrapper"></i> <b>I Code</b></span>
-                    <span class="mx-5"><i class="fas fa-bezier-curve home-icon-wrapper"></i> <b>I Design</b></span>
-                    <span><i class="fas fa-chess-board home-icon-wrapper"></i><b>I Play Chess</b> </span>
-                </p> -->
 
             </div>
             <div class="col-md-2"></div>
