--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -8,25 +8,21 @@
             <div class="col-md-1"></div>
         </div>
     </div>
-    <div class="container py-5 my-2" *ngFor="let list of ProjectListData">
+    <div class="container py-5 my-2">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-5 my-auto">
+            <div class="col-md-4" *ngFor="let list of ProjectListData">
                 <img src="{{list.ImageLink}}" class="img-fluid">
-            </div>
-            <div class="col-md-5 my-auto">
-                <h4>{{list.Title}}</h4>
+                <h5>{{list.Title}}</h5>
                 <p style="color: #505F79; font-style: italic; margin-bottom: 5px;font-weight: bold;">
                     {{list.ProjectType}}
                 </p>
-                <p>
+                <!-- <p>
                     {{list.Description}}
-                </p>
+                </p> -->
                 <a routerLink="{{list.RouterLink}}" routerLinkActive="active">
                     <button class="btn btn-dark">Learn more</button>
                 </a>
             </div>
-            <div class="col-md-1"></div>
         </div>
     </div>
 </div>
