--- a/src/styles.sass
+++ b/src/styles.sass
@@ -95,3 +95,11 @@ p b
 .image-shadow
     box-shadow: 0px 0px 5px -1px #bdbdbd
 
+.home-image-icon
+    width: 150px
+    height: 150px
+    border-radius: 50%
+    background-image: url(/assets/images/home-image-icon.jpg)
+    background-size: cover
+    background-position: bottom
+    display: inline-block
