--- a/src/styles.sass
+++ b/src/styles.sass
@@ -103,3 +103,27 @@ p b
     background-size: cover
     background-position: bottom
     display: inline-block
+
+.git-btn
+    background: black
+    color: white
+    transition: 0.2s all
+
+.git-btn:hover
+    opacity: 0.7
+    color: white
+
+.demo-btn
+    background: #007dd9
+    color: white
+    transition: 0.2s all
+
+.demo-btn:hover
+    opacity: 0.9
+    color: white
+
+.project-card
+    background: #ffffff
+    border-radius: 10px
+    padding: 15px
+    box-shadow: 0px 1px 4px 4px #e4e4e4
