UI changes and added components

--- a/src/app/agile-board/agile-board.component.html
+++ b/src/app/agile-board/agile-board.component.html
@@ -1,22 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8">
+        <div class="col-md-4">
             <h3 class="my-3">Agile Board</h3>
+        </div>
+        <div class="col-md-4" style="text-align: right;">
+            <button class="btn btn-md demo-btn mr-2"><i class="fas fa-link mr-2"></i>Demo</button>
+            <button class="btn btn-md git-btn"><i class="fab fa-github mr-2"></i>GitHub</button>
         </div>
         <div class="col-md-2"></div>
     </div>
 </div>
-<img src="../../assets/images/agile-board.jpg" class="img-fluid">
-<div class="container">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center m-3">
-            <button class="btn btn-lg demo-btn mr-2"><i class="fas fa-link mr-2"></i>Demo</button>
-            <button class="btn btn-lg git-btn"><i class="fab fa-github mr-2"></i>GitHub</button>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
+<div style="background-image: url(../../assets/images/agile-board/cover-image.png);" class="case-study-cover-img">
+
 </div>
 
 <section>
@@ -24,7 +20,7 @@
         <div class="row  my-5">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <h3>Project Overview</h3>
+                <h5>Project Overview</h5>
                 <p>
                     Wheel for change was an platform for Social Entrepreneurs where Potential investors
                     could
@@ -38,10 +34,9 @@
     </div>
 </section>
 
-
 <section>
     <div class="container">
-        <div class="row  my-5">
+        <div class="row my-5">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h3>Tech stack</h3>
@@ -70,16 +65,4 @@
     </div>
 </section>
 
-<section>
-    <div class="container">
-        <div class="row  my-5">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <h3>Other Projects</h3>
-
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
-</section>
 <app-project-list></app-project-list>
