--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,117 +1,99 @@
-<section>
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-md-5">
-                <img src="../../assets/images/my-journey.jpg" class="img-fluid image-shadow mb-3">
-            </div>
-            <div class="col-md-7 my-auto">
-                <h1>My Journey</h1>
-                <p>
-                    I started my career as a Web developer in a small startup of 3 people. There I got the
-                    opportunity to work on a SaaS based product and met very amazing people.
-                </p>
+<div id="about-me" class="my-5">
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3 class="mb-3">Skills</h3>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div *ngFor="let skill of Skills" class="col-md-2 col-xs-6 mb-3 text-center">
+                                <img height="30px" width="30px" src="{{skill.Icon}}" />
+                                <p style="font-weight: 500; font-size: 18px;opacity: 0.9;">
+                                    {{skill.Name}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
             </div>
         </div>
-    </div>
-</section>
-<!-- <section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                
-            </div>
-            <div class="col-md-7">
-                <p class="quote-text mb-0">
-                    <i>
-                        "You rarely come across standout talent like Saifil. He expertly
-                        filled
-                        the
-                        role
-                        of User Experience Design Intern at Impactrio for my company’s
-                        "Impactraction,"
-                        formerly "Wheel for Change" team. He, with other collaborators, took
-                        the
-                        idea of
-                        the solution and designed, wire framed, created the MVP of the app.
-                        Not
-                        only
-                        did
-                        Saifil show initiative in building out our UI/UX architecture from
-                        scratch,
-                        but
-                        he also played a huge role in bringing innovative features from a
-                        design
-                        perspective. He understood the framework of social innovation, did
-                        in-depth
-                        research, and provided effective solutions, especially on the
-                        onboarding
-                        process
-                        of a social entrepreneur. All inall, Saifil is a rock star and any
-                        organization
-                        would be lucky to have him!"
-                    </i>
-                </p>
-                <p class="quote-author">Ashraful Hasan - Founder and Lead Consultant at Impactrio</p>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <p class="quote-text mb-0">
-                    <i>
-                        "Saifil is smart, creative and professional. He has helped shape the
-                        BPM-D App
-                        and
-                        has played a crucial role in designing the user interface.
-                        He is dedicated and a pleasure to work with. He has been helpful,
-                        energetic
-                        and
-                        dedicated to all the work assigned to him and helped shaping the
-                        BPM-D
-                        India
-                        team.
-                        I will be happy to recommend saifil to any organisation that
-                        appreciates
-                        creativity and needs design thinkers.
+    </section>
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <h3 class="mb-3">About Me</h3>
+                    <p>
+                        Hey, I am Saifil a Develper and designer. I graduated from my bachelors 
+                        in computer science in 2017. Thereafter I joined a Startup called BPM-D as a Developer. 
+                        There i learned Angular and many other things.  Being in a Startup i was doing much more than just coding, 
+                        I was doing design work creating mockups, was part of hiring process 
+                    </p>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p class="quote-text mb-0">
+                        <!-- "You rarely come across standout talent like Saifil. He expertly filled the role
+                        of User Experience Design Intern at Impactrio for my company’s "Impactraction,"
+                        formerly "Wheel for Change" team. He, with other collaborators, took the idea of
+                        the solution and designed, wire framed, created the MVP of the app. Not only did
+                        Saifil show initiative in building out our UI/UX architecture from scratch, but
+                        he also played a huge role in bringing innovative features from a design
+                        perspective. He understood the framework of social innovation, did in-depth
+                        research, and provided effective solutions, especially on the onboarding
+                        process of a social entrepreneur. All inall, Saifil is a rock star and any
+                        organization would be lucky to have him!" -->
+                        "You rarely come across standout talent like Saifil. He expertly filled the role
+                        of User Experience Design Intern at Impactrio for my company’s "Impactraction,"
+                        formerly "Wheel for Change" team. He, with other collaborators, took the idea of
+                        the solution and designed, wire framed, created the MVP of the app. Not only did
+                        Saifil show initiative in building out our UI/UX architecture from scratch, but
+                        he also played a huge role in bringing innovative features from a design
+                        perspective."
+                    </p>
+                    <p class="quote-author">Ashraful Hasan - Founder and Lead Consultant at Impactrio</p>
+                </div>
+                <div class="col-md-4">
+                    <p class="quote-text mb-0">
+                        <!-- "Saifil is smart, creative and professional. He has helped shape the
+                        BPM-D App and has played a crucial role in designing the user interface.
+                        He is dedicated and a pleasure to work with. He has been helpful, energetic and
+                        dedicated to all the work assigned to him and helped shaping the BPM-D India team.
+                        I will be happy to recommend saifil to any organisation that
+                        appreciates creativity and needs design thinkers.
                         Wish him all the best for his higher studies, I am sure he will do
-                        well
-                        in
-                        his
-                        career. "
-                    </i>
-                </p>
-                <p class="quote-author">Rakesh Gusain - Director at BPM-D</p>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <p class="quote-text mb-0">
-                    <i>
+                        well in his career. " -->
+                        "Saifil is smart, creative and professional. He has helped shape the
+                        BPM-D App and has played a crucial role in designing the user interface.
+                        He is dedicated and a pleasure to work with. He has been helpful, energetic and
+                        dedicated to all the work assigned to him and helped shaping the BPM-D India team.
+                        I will be happy to recommend saifil to any organisation that
+                        appreciates creativity and needs design thinkers."
+                    </p>
+                    <p class="quote-author">Rakesh Gusain - Director at BPM-D</p>
+                </div>
+                <div class="col-md-4">
+                    <p class="quote-text mb-0">
                         "Saifil is a great team player to work with. Brings Exciting and
-                        Innovative
-                        Ideas
-                        constantly in the team to drive any project he's a part of. Has
-                        quality
-                        skills
-                        in UI/UX with a good amount of experience in designing Web pages for
-                        our
-                        product. He's Smart and thinks at right pace in the right place. It
-                        was
-                        a
-                        pleasure to work with him in all the projects we were in together"
-                    </i>
-                </p>
-                <p class="quote-author">Rehban Khatri - Technical Consultant at BPM-D</p>
+                        Innovative Ideas constantly in the team to drive any project he's a part of. Has
+                        quality skills in UI/UX with a good amount of experience in designing Web pages for
+                        our product. He's Smart and thinks at right pace in the right place. It
+                        was a pleasure to work with him in all the projects we were in together"
+                    </p>
+                    <p class="quote-author">Rehban Khatri - Technical Consultant at BPM-D</p>
+                </div>
             </div>
-            <div class="col-md-2"></div>
         </div>
-    </div>
-</section> -->
-<footer>
-    <app-footer></app-footer>
-</footer>
-  
+    </section>
+</div>
