--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-light header-custom">
       <div class="container">
         <a routerLink="" routerLinkActive="active" class="navbar-brand" href="#">
-          <img src="../assets/images/logo.png" width="25" height="25" alt="">
+          <img src="../assets/images/logo.png" width="auto" height="25" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,8 +13,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li *ngFor="let ml of MenuVMs" class="{{ml.navclass}}" (click)="OnLinkClick(ml)">
-              <a routerLink="{{ml.RouterLink}}" routerLinkActive="active" class="nav-link">{{ml.Linkname}}</a>
+            <li class="nav-item">
+              <a href="#footer" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about-me" class="nav-link">About me</a>
             </li>
           </ul>
         </div>
