--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,30 +1,22 @@
-<section style="padding-top: 20px; padding-bottom: 20px;">
+<section id="footer" class="py-5" style="background: #f3f4f7;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 my-auto" style="text-align: center;">
-                <h3>Get In Touch</h3>
-                <p style="font-size: 17px;color:#505F79;">
+                <h2>Get In Touch</h2>
+                <p>
                     If you have a interesting project I can contribute to then you can hit me up at
                     <a href="mailto: saifilmomin4@gmail.com">saifilmomin4@gmail.com</a>
                 </p>
                 <img src="../../assets/images/logo.png" width="25" height="25" alt="">
 
-
             </div>
         </div>
     </div>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-12 my-auto" style="text-align: center;">
-                <img src="../../assets/images/logo.png" width="25" height="25" alt="">
-            </div>
-        </div>
-    </div> -->
 </section>
 <section style="background: black;color: white;font-size: 12px; text-align: right;">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 p-2">
+            <div class="col-md-12 p-2 text-center">
                 Designed and Developed by Saifil Momin
             </div>
         </div>
