--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,24 @@
 <section>
-    <div class="container">
-        <div class="row" style="height: 85vh;">
-            <div class="col-md-2"></div>
-            <div style="text-align: center;" class="col-md-8 my-auto">
-                <div class="home-image-icon"></div>
-                <h5>
-                    Hello! I am Saifil
-                </h5>
-                <h2 style="font-weight: 400;">
-                    A Web Developer and Designer based in Toronto
-                </h2>
-                <p style="font-size: 20px;color: #505F79;">
-                    I believe in solving user problems by understanding their habits and patterns and integrating them
-                    into my designs to create a seamless and effortless experience.
+    <div class="container my-3">
+        <div class="row">
+            <div class="col-md-6 my-auto">
+                <h2 class="introduction">Hello, I am Saifil</h2>
+                <h1 style="color: #5222D0;">
+                    Developer and Designer based in Toronto
+                </h1>
+                <p style="font-size: 18px;color: #505F79;">
+                  My expertise lies in creating beautiful and functional interfaces
                 </p>
-
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-6 my-auto text-center">
+                <img class="img-fluid" src="../../assets/images/programming.png" />
+            </div>
         </div>
     </div>
 </section>
 
 <app-project-list></app-project-list>
+<app-about-me></app-about-me>
+<footer>
+    <app-footer></app-footer>
+</footer>
