--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,53 +1,59 @@
-<div>
+<div class="py-5" style="background: #f4f5f7;">
     <div class="container">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <h1>My Work</h1>
+            <div class="col-md-12">
+                <h3>My Work</h3>
             </div>
-            <div class="col-md-1"></div>
         </div>
     </div>
-    <div class="container py-5 my-2">
+    <div class="container py-3">
         <div class="row">
-            <div class="col-md-4" *ngFor="let list of DevelopmentProjectList">
-                <div class="project-card">
-                    <img src="{{list.ImageLink}}" class="img-fluid">
-                    <h5>{{list.Title}}</h5>
-                    <p style="color: #505F79; font-style: italic; margin-bottom: 5px;font-weight: bold;">
-                        {{list.ProjectType}}
-                    </p>
-                    <!-- <p>
-                        {{list.Description}}
-                    </p> -->
-                    <a routerLink="{{list.RouterLink}}" routerLinkActive="active">
-                        <button class="btn btn-dark">Learn more</button>
-                    </a>
-                </div>
+            <div class="col-md-12">
+                <h5>Development</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 mb-3" *ngFor="let project of DevelopmentProjectList">
+                <app-card [Project]="project"></app-card>
             </div>
         </div>
     </div>
 
-    <div class="container py-5 my-2">
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-md-12">
+                <h5>Currently Working On</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 " *ngFor="let project of WIPList">
+                <app-card [Project]="project"></app-card>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="container py-3">
+        <div class="row">
+            <div class="col-md-12">
+                <h5>UI/UX Design</h5>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-4" *ngFor="let list of UXProjectList">
-                <div class="project-card">
+                <div class="project-item">
                     <img src="{{list.ImageLink}}" class="img-fluid">
-                    <h5>{{list.Title}}</h5>
-                    <p style="color: #505F79; font-style: italic; margin-bottom: 5px;font-weight: bold;">
+                    <p class="title">{{list.Title}}</p>
+                    <p class="sub-title">
                         {{list.ProjectType}}
                     </p>
-                    <!-- <p>
+                    <p>
                         {{list.Description}}
-                    </p> -->
+                    </p>
                     <a routerLink="{{list.RouterLink}}" routerLinkActive="active">
-                        <button class="btn btn-dark">Learn more</button>
+                        Learn more
                     </a>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
-<footer>
-    <app-footer></app-footer>
-</footer>
