--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,9 +7,10 @@
                     <h3 style="color: white;" class="mb-3 text-center">About Me</h3>
                     <p style="color: white;">
                         Hey, I am Saifil, a developer and designer. I have a background in computer science and
-                        interactive media management. I have worked with early-stage start-ups and assisted them in
+                        recently graduated from the Interactive Media Management program. I have experience working with
+                        early-stage start-ups and assisting them in
                         building accessible and usable products. I love trying out new things and am constantly
-                        learning. Apart from my work, I love playing chess and ping pong and I hold an interest in
+                        learning. Apart from my work, I love playing chess and ping pong and hold an interest in
                         sustainable development, especially in the space of architecture.
                     </p>
                 </div>
