--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light header-custom">
   <div class="container">
-    <a routerLink="" routerLinkActive="active" class="navbar-brand" href="#">
-      <img src="../assets/images/logo.png" width="auto" height="25" alt="">
+    <a class="navbar-brand" style="cursor: pointer;">
+      <img (click)="OnLogoClick()" src="../assets/images/logo.png" width="auto" height="25" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,11 +10,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="#footer" class="nav-link header-link">Contact</a>
+        <li class="nav-item" (click)="OnContactClick()">
+          <a class="nav-link header-link">Contact</a>
         </li>
-        <li class="nav-item">
-          <a href="#about-me" class="nav-link header-link">About me</a>
+        <li class="nav-item" (click)="OnAboutMeClick()">
+          <a class="nav-link header-link">About me</a>
         </li>
         <li class="nav-item">
           <a href="https://github.com/saifil4" target="blank" class="nav-link header-link">
@@ -28,7 +28,8 @@
         </li>
       </ul>
       <form class="d-flex">
-        <a href="../assets/docs/Saifil Momin Resume.pdf" download="Saifil Momin Resume.pdf" class="btn btn-primary" style="background-color: #5222D0;" role="button" data-bs-toggle="button">
+        <a href="../assets/docs/Saifil Momin Resume.pdf" download="Saifil Momin Resume.pdf" class="btn btn-primary"
+          style="background-color: #5222D0;" role="button" data-bs-toggle="button">
           Resume<i class="fas fa-download ml-2"></i>
         </a>
       </form>
