--- a/src/styles.sass
+++ b/src/styles.sass
@@ -164,6 +164,7 @@ p b
     color: #505F79 !important
     margin-right: 15px
     font-weight: 500
+    cursor: pointer
 
     &:hover
         text-decoration: underline
@@ -183,7 +184,7 @@ p b
     background: #FDF8FF
     border: 1px solid #EAE6FF
     padding: 5px 15px
-    display: inline-flex
+    display: inline-block
     border-radius: 20px
     font-weight: 500
 
