--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="home">
     <div class="container my-3">
         <div class="row">
             <div class="col-md-6 introduction">
