--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
                 <h3 class="mb-3">Skills & Tools</h3>
             </div>
             <div *ngIf="!IsHomePage" class="col-md-8">
-                <h5>Technolgies used</h5>
+                <h5 class="mb-3">Technolgies used</h5>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -14,7 +14,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <div class="skill mr-3 mb-3" *ngFor="let skill of Skills">
-                    <img alt="{{skill.Alt}}" class="mr-1" height="25px" width="25px" src="{{skill.Icon}}" />{{skill.Name}}
+                    <img *ngIf="skill.Icon" alt="{{skill.Alt}}" class="mr-1" height="25px" width="25px" src="{{skill.Icon}}" />{{skill.Name}}
                 </div>
             </div>
             <div class="col-md-2"></div>
