changes in folder structure

--- a/src/app/ux-projects/wheel-for-change/wheel-for-change.component.html
+++ b/src/app/ux-projects/wheel-for-change/wheel-for-change.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row" style="margin-bottom: 20px;">
                 <div class="col-md-7">
-                    <img src="../../assets/images/woc-spash.png" class="img-fluid">
+                    <img src="../../../assets/images/wfc/woc-spash.png" class="img-fluid">
                 </div>
                 <div class="col-md-5 my-auto">
                     <h1 style="color: white;">
@@ -60,7 +60,7 @@
         </div>
     </section>
     <section>
-        <div class="woc-pages"></div>
+        <div style="background-image: url(../../../assets/images/wfc/woc-2.png);" class="woc-pages"></div>
     </section>
 
 
@@ -90,8 +90,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../assets/images/Persona1.PNG" class="img-fluid image-shadow mb-3">
-                    <img src="../../assets/images/persona2.PNG" class="img-fluid image-shadow">
+                    <img src="../../../assets/images/wfc/Persona1.PNG" class="img-fluid image-shadow mb-3">
+                    <img src="../../../assets/images/wfc/persona2.PNG" class="img-fluid image-shadow">
                 </div>
                 <div class="col-md-6 my-auto">
                     <h3>User Research</h3>
@@ -113,8 +113,8 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../assets/images/userflow1.PNG" class="img-fluid image-shadow mb-3">
-                    <img src="../../assets/images/userflow2.PNG" class="img-fluid image-shadow">
+                    <img src="../../../assets/images/wfc/userflow1.PNG" class="img-fluid image-shadow mb-3">
+                    <img src="../../../assets/images/wfc/userflow2.PNG" class="img-fluid image-shadow">
                 </div>
                 <div class="col-md-6 my-auto">
                     <h3>User Flows</h3>
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h4>Tasks</h4>
-                    <img src="../../assets/images/tasks.jpg" class="img-fluid image-shadow">
+                    <img src="../../../assets/images/wfc/tasks.jpg" class="img-fluid image-shadow">
                 </div>
                 <div class="col-md-6 my-auto">
                     <p>
@@ -162,7 +162,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../assets/images/typeforms.PNG" class="img-fluid image-shadow">
+                    <img src="../../../assets/images/wfc/typeforms.PNG" class="img-fluid image-shadow">
                 </div>
                 <div class="col-md-6 my-auto">
                     <h4>Designing Forms</h4>
@@ -187,7 +187,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../../assets/images/Journey.gif" class="img-fluid image-shadow">
+                    <img src="../../../assets/images/wfc/Journey.gif" class="img-fluid image-shadow">
                 </div>
                 <div class="col-md-6 my-auto">
                     <h4>Adding nagation to forms</h4>
@@ -234,6 +234,3 @@
         </div>
     </section> -->
 </div>
-<footer>
-    <app-footer></app-footer>
-</footer>
